MCR-1058 #comment fixed NPE and use URI to support "rtmp" scheme and some refactorings
git-svn-id: https://server.mycore.de/svn/mycore/trunk@33546 7089d063-bc14-496d-ac90-53de1872eb6c